# mensa-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-push-image.yml
mensa_mcp/: __init__.py  cache.py  config.py  exceptions.py  models.py  scraper.py  server.py
